// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getComponentCss() should return correct css for gradientColor: background-base, isNextHidden: false, isPrevHidden: false, scrollIndicatorPosition: center, hasScrollbar: false and theme: dark 1`] = `
":host {
  display: block;
  height: inherit !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
button {
  display: flex;
  pointer-events: auto;
  align-items: center;
  justify-content: center;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  height: calc(calc(6px + 2.125ex) + 4px);
  width: calc(calc(6px + 2.125ex) + 4px);
  border: 0;
  outline: 0;
  cursor: pointer;
  background: #212225;
  border-radius: 4px;
  -webkit-backdrop-filter: blur(32px);
  backdrop-filter: blur(32px);
  visibility: hidden;
}
@media(hover:hover) {
  button {
    transition: background-color var(--p-transition-duration, .24s) ease;
  }
  button:hover {
    -webkit-backdrop-filter: blur(32px);
    backdrop-filter: blur(32px);
    background: rgba(148, 149, 152, .18);
  }
}

.root {
  position: relative;
  display: grid;
  grid-template-columns: calc(calc(6px + 2.125ex) + 24px) minmax(0, 1fr) calc(calc(6px + 2.125ex) + 24px);
  margin: 0 -4px;
  height: inherit;
}
.scroll-area {
  grid-area: 1 / 1 / 1 / -1;
  padding: 4px;
  overflow: auto hidden;
  -ms-overflow-style: none;
  scrollbar-width: none;
}
.scroll-area::-webkit-scrollbar {
  display: none;
}
.scroll-wrapper {
  position: relative;
  display: inline-flex;
  min-height: 28px;
  min-width: 100%;
  vertical-align: top;
  outline: 0;
}
.scroll-wrapper::before {
  content: "";
  position: absolute;
  top: -4px;
  left: -4px;
  right: -4px;
  bottom: -4px;
  border: 2px solid transparent;
  border-radius: 4px;
  pointer-events: none;
}
.scroll-wrapper:focus::before {
  border-color: #1A44EA;
}
.scroll-wrapper:focus:not(:focus-visible)::before {
  border-color: transparent;
}
.trigger {
  position: absolute;
  top: 0;
  bottom: 0;
  width: 1px;
  visibility: hidden;
}
.trigger:first-of-type {
  left: 0;
}
.trigger:last-of-type {
  right: 0;
}
.action-prev {
  position: absolute;
  top: 0;
  bottom: 0;
  direction: ltr;
  width: calc(calc(6px + 2.125ex) + 24px);
  padding: 4px 0;
  pointer-events: none;
  display: flex;
  align-items: center;
  left: -1px;
  justify-content: flex-start;
  background: linear-gradient(to right, rgba(14,14,18,1) 20%,rgba(14,14,18,0.6) 48%,rgba(14,14,18,0.3) 68%,rgba(14,14,18,0) 100%);
  visibility: visible;
}
.action-prev button {
  margin-left: 8px;
}
.action-next {
  position: absolute;
  top: 0;
  bottom: 0;
  direction: ltr;
  width: calc(calc(6px + 2.125ex) + 24px);
  padding: 4px 0;
  pointer-events: none;
  display: flex;
  align-items: center;
  right: -1px;
  justify-content: flex-end;
  background: linear-gradient(to left, rgba(14,14,18,1) 20%,rgba(14,14,18,0.6) 48%,rgba(14,14,18,0.3) 68%,rgba(14,14,18,0) 100%);
  visibility: visible;
}
.action-next button {
  margin-right: 8px;
}
@media(hover:hover) {
  .action-prev button {
    visibility: visible;
  }
  .action-next button {
    visibility: visible;
  }
}
"
`;

exports[`getComponentCss() should return correct css for gradientColor: background-base, isNextHidden: false, isPrevHidden: false, scrollIndicatorPosition: center, hasScrollbar: false and theme: light 1`] = `
":host {
  display: block;
  height: inherit !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
button {
  display: flex;
  pointer-events: auto;
  align-items: center;
  justify-content: center;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  height: calc(calc(6px + 2.125ex) + 4px);
  width: calc(calc(6px + 2.125ex) + 4px);
  border: 0;
  outline: 0;
  cursor: pointer;
  background: #FFF;
  border-radius: 4px;
  -webkit-backdrop-filter: blur(32px);
  backdrop-filter: blur(32px);
  visibility: hidden;
  box-shadow: 0px 3px 8px rgba(0, 0, 0, 0.16);
}
@media(hover:hover) {
  button {
    transition: background-color var(--p-transition-duration, .24s) ease;
  }
  button:hover {
    -webkit-backdrop-filter: blur(32px);
    backdrop-filter: blur(32px);
    background: rgba(148, 149, 152, .18);
  }
}

.root {
  position: relative;
  display: grid;
  grid-template-columns: calc(calc(6px + 2.125ex) + 24px) minmax(0, 1fr) calc(calc(6px + 2.125ex) + 24px);
  margin: 0 -4px;
  height: inherit;
}
.scroll-area {
  grid-area: 1 / 1 / 1 / -1;
  padding: 4px;
  overflow: auto hidden;
  -ms-overflow-style: none;
  scrollbar-width: none;
}
.scroll-area::-webkit-scrollbar {
  display: none;
}
.scroll-wrapper {
  position: relative;
  display: inline-flex;
  min-height: 28px;
  min-width: 100%;
  vertical-align: top;
  outline: 0;
}
.scroll-wrapper::before {
  content: "";
  position: absolute;
  top: -4px;
  left: -4px;
  right: -4px;
  bottom: -4px;
  border: 2px solid transparent;
  border-radius: 4px;
  pointer-events: none;
}
.scroll-wrapper:focus::before {
  border-color: #1A44EA;
}
.scroll-wrapper:focus:not(:focus-visible)::before {
  border-color: transparent;
}
.trigger {
  position: absolute;
  top: 0;
  bottom: 0;
  width: 1px;
  visibility: hidden;
}
.trigger:first-of-type {
  left: 0;
}
.trigger:last-of-type {
  right: 0;
}
.action-prev {
  position: absolute;
  top: 0;
  bottom: 0;
  direction: ltr;
  width: calc(calc(6px + 2.125ex) + 24px);
  padding: 4px 0;
  pointer-events: none;
  display: flex;
  align-items: center;
  left: -1px;
  justify-content: flex-start;
  background: linear-gradient(to right, rgba(255,255,255,1) 20%,rgba(255,255,255,0.6) 48%,rgba(255,255,255,0.3) 68%,rgba(255,255,255,0) 100%);
  visibility: visible;
}
.action-prev button {
  margin-left: 8px;
}
.action-next {
  position: absolute;
  top: 0;
  bottom: 0;
  direction: ltr;
  width: calc(calc(6px + 2.125ex) + 24px);
  padding: 4px 0;
  pointer-events: none;
  display: flex;
  align-items: center;
  right: -1px;
  justify-content: flex-end;
  background: linear-gradient(to left, rgba(255,255,255,1) 20%,rgba(255,255,255,0.6) 48%,rgba(255,255,255,0.3) 68%,rgba(255,255,255,0) 100%);
  visibility: visible;
}
.action-next button {
  margin-right: 8px;
}
@media(hover:hover) {
  .action-prev button {
    visibility: visible;
  }
  .action-next button {
    visibility: visible;
  }
}
"
`;

exports[`getComponentCss() should return correct css for gradientColor: background-base, isNextHidden: false, isPrevHidden: false, scrollIndicatorPosition: top, hasScrollbar: true and theme: light 1`] = `
":host {
  display: block;
  height: inherit !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
button {
  display: flex;
  pointer-events: auto;
  align-items: center;
  justify-content: center;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  height: calc(calc(6px + 2.125ex) + 4px);
  width: calc(calc(6px + 2.125ex) + 4px);
  border: 0;
  outline: 0;
  cursor: pointer;
  background: #FFF;
  border-radius: 4px;
  -webkit-backdrop-filter: blur(32px);
  backdrop-filter: blur(32px);
  visibility: hidden;
  box-shadow: 0px 3px 8px rgba(0, 0, 0, 0.16);
}
@media(hover:hover) {
  button {
    transition: background-color var(--p-transition-duration, .24s) ease;
  }
  button:hover {
    -webkit-backdrop-filter: blur(32px);
    backdrop-filter: blur(32px);
    background: rgba(148, 149, 152, .18);
  }
}

.root {
  position: relative;
  display: grid;
  grid-template-columns: calc(calc(6px + 2.125ex) + 24px) minmax(0, 1fr) calc(calc(6px + 2.125ex) + 24px);
  margin: 0 -4px;
  height: inherit;
}
.scroll-area {
  grid-area: 1 / 1 / 1 / -1;
  padding: 4px;
  overflow: auto hidden;
}
.scroll-wrapper {
  position: relative;
  display: inline-flex;
  min-height: 28px;
  min-width: 100%;
  vertical-align: top;
  outline: 0;
}
.scroll-wrapper::before {
  content: "";
  position: absolute;
  top: -4px;
  left: -4px;
  right: -4px;
  bottom: -4px;
  border: 2px solid transparent;
  border-radius: 4px;
  pointer-events: none;
}
.scroll-wrapper:focus::before {
  border-color: #1A44EA;
}
.scroll-wrapper:focus:not(:focus-visible)::before {
  border-color: transparent;
}
.trigger {
  position: absolute;
  top: 0;
  bottom: 0;
  width: 1px;
  visibility: hidden;
}
.trigger:first-of-type {
  left: 0;
}
.trigger:last-of-type {
  right: 0;
}
.action-prev {
  position: absolute;
  top: 0;
  bottom: 0;
  direction: ltr;
  width: calc(calc(6px + 2.125ex) + 24px);
  padding: 4px 0;
  pointer-events: none;
  display: flex;
  align-items: flex-start;
  left: -1px;
  justify-content: flex-start;
  background: linear-gradient(to right, rgba(255,255,255,1) 20%,rgba(255,255,255,0.6) 48%,rgba(255,255,255,0.3) 68%,rgba(255,255,255,0) 100%);
  visibility: visible;
}
.action-prev button {
  margin-left: 8px;
}
.action-next {
  position: absolute;
  top: 0;
  bottom: 0;
  direction: ltr;
  width: calc(calc(6px + 2.125ex) + 24px);
  padding: 4px 0;
  pointer-events: none;
  display: flex;
  align-items: flex-start;
  right: -1px;
  justify-content: flex-end;
  background: linear-gradient(to left, rgba(255,255,255,1) 20%,rgba(255,255,255,0.6) 48%,rgba(255,255,255,0.3) 68%,rgba(255,255,255,0) 100%);
  visibility: visible;
}
.action-next button {
  margin-right: 8px;
}
@media(hover:hover) {
  .action-prev button {
    visibility: visible;
  }
  .action-next button {
    visibility: visible;
  }
}
"
`;

exports[`getComponentCss() should return correct css for gradientColor: background-base, isNextHidden: false, isPrevHidden: true, scrollIndicatorPosition: undefined, hasScrollbar: true and theme: dark 1`] = `
":host {
  display: block;
  height: inherit !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
button {
  display: flex;
  pointer-events: auto;
  align-items: center;
  justify-content: center;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  height: calc(calc(6px + 2.125ex) + 4px);
  width: calc(calc(6px + 2.125ex) + 4px);
  border: 0;
  outline: 0;
  cursor: pointer;
  background: #212225;
  border-radius: 4px;
  -webkit-backdrop-filter: blur(32px);
  backdrop-filter: blur(32px);
  visibility: hidden;
}
@media(hover:hover) {
  button {
    transition: background-color var(--p-transition-duration, .24s) ease;
  }
  button:hover {
    -webkit-backdrop-filter: blur(32px);
    backdrop-filter: blur(32px);
    background: rgba(148, 149, 152, .18);
  }
}

.root {
  position: relative;
  display: grid;
  grid-template-columns: calc(calc(6px + 2.125ex) + 24px) minmax(0, 1fr) calc(calc(6px + 2.125ex) + 24px);
  margin: 0 -4px;
  height: inherit;
}
.scroll-area {
  grid-area: 1 / 1 / 1 / -1;
  padding: 4px;
  overflow: auto hidden;
}
.scroll-wrapper {
  position: relative;
  display: inline-flex;
  min-height: 28px;
  min-width: 100%;
  vertical-align: top;
  outline: 0;
}
.scroll-wrapper::before {
  content: "";
  position: absolute;
  top: -4px;
  left: -4px;
  right: -4px;
  bottom: -4px;
  border: 2px solid transparent;
  border-radius: 4px;
  pointer-events: none;
}
.scroll-wrapper:focus::before {
  border-color: #1A44EA;
}
.scroll-wrapper:focus:not(:focus-visible)::before {
  border-color: transparent;
}
.trigger {
  position: absolute;
  top: 0;
  bottom: 0;
  width: 1px;
  visibility: hidden;
}
.trigger:first-of-type {
  left: 0;
}
.trigger:last-of-type {
  right: 0;
}
.action-prev {
  position: absolute;
  top: 0;
  bottom: 0;
  direction: ltr;
  width: calc(calc(6px + 2.125ex) + 24px);
  padding: 4px 0;
  pointer-events: none;
  display: flex;
  align-items: flex-start;
  left: -1px;
  justify-content: flex-start;
  background: linear-gradient(to right, rgba(14,14,18,1) 20%,rgba(14,14,18,0.6) 48%,rgba(14,14,18,0.3) 68%,rgba(14,14,18,0) 100%);
  visibility: hidden;
}
.action-prev button {
  margin-left: 8px;
}
.action-next {
  position: absolute;
  top: 0;
  bottom: 0;
  direction: ltr;
  width: calc(calc(6px + 2.125ex) + 24px);
  padding: 4px 0;
  pointer-events: none;
  display: flex;
  align-items: flex-start;
  right: -1px;
  justify-content: flex-end;
  background: linear-gradient(to left, rgba(14,14,18,1) 20%,rgba(14,14,18,0.6) 48%,rgba(14,14,18,0.3) 68%,rgba(14,14,18,0) 100%);
  visibility: visible;
}
.action-next button {
  margin-right: 8px;
}
@media(hover:hover) {
  .action-prev button {
    visibility: hidden;
  }
  .action-next button {
    visibility: visible;
  }
}
"
`;

exports[`getComponentCss() should return correct css for gradientColor: background-base, isNextHidden: true, isPrevHidden: false, scrollIndicatorPosition: undefined, hasScrollbar: true and theme: light 1`] = `
":host {
  display: block;
  height: inherit !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
button {
  display: flex;
  pointer-events: auto;
  align-items: center;
  justify-content: center;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  height: calc(calc(6px + 2.125ex) + 4px);
  width: calc(calc(6px + 2.125ex) + 4px);
  border: 0;
  outline: 0;
  cursor: pointer;
  background: #FFF;
  border-radius: 4px;
  -webkit-backdrop-filter: blur(32px);
  backdrop-filter: blur(32px);
  visibility: hidden;
  box-shadow: 0px 3px 8px rgba(0, 0, 0, 0.16);
}
@media(hover:hover) {
  button {
    transition: background-color var(--p-transition-duration, .24s) ease;
  }
  button:hover {
    -webkit-backdrop-filter: blur(32px);
    backdrop-filter: blur(32px);
    background: rgba(148, 149, 152, .18);
  }
}

.root {
  position: relative;
  display: grid;
  grid-template-columns: calc(calc(6px + 2.125ex) + 24px) minmax(0, 1fr) calc(calc(6px + 2.125ex) + 24px);
  margin: 0 -4px;
  height: inherit;
}
.scroll-area {
  grid-area: 1 / 1 / 1 / -1;
  padding: 4px;
  overflow: auto hidden;
}
.scroll-wrapper {
  position: relative;
  display: inline-flex;
  min-height: 28px;
  min-width: 100%;
  vertical-align: top;
  outline: 0;
}
.scroll-wrapper::before {
  content: "";
  position: absolute;
  top: -4px;
  left: -4px;
  right: -4px;
  bottom: -4px;
  border: 2px solid transparent;
  border-radius: 4px;
  pointer-events: none;
}
.scroll-wrapper:focus::before {
  border-color: #1A44EA;
}
.scroll-wrapper:focus:not(:focus-visible)::before {
  border-color: transparent;
}
.trigger {
  position: absolute;
  top: 0;
  bottom: 0;
  width: 1px;
  visibility: hidden;
}
.trigger:first-of-type {
  left: 0;
}
.trigger:last-of-type {
  right: 0;
}
.action-prev {
  position: absolute;
  top: 0;
  bottom: 0;
  direction: ltr;
  width: calc(calc(6px + 2.125ex) + 24px);
  padding: 4px 0;
  pointer-events: none;
  display: flex;
  align-items: flex-start;
  left: -1px;
  justify-content: flex-start;
  background: linear-gradient(to right, rgba(255,255,255,1) 20%,rgba(255,255,255,0.6) 48%,rgba(255,255,255,0.3) 68%,rgba(255,255,255,0) 100%);
  visibility: visible;
}
.action-prev button {
  margin-left: 8px;
}
.action-next {
  position: absolute;
  top: 0;
  bottom: 0;
  direction: ltr;
  width: calc(calc(6px + 2.125ex) + 24px);
  padding: 4px 0;
  pointer-events: none;
  display: flex;
  align-items: flex-start;
  right: -1px;
  justify-content: flex-end;
  background: linear-gradient(to left, rgba(255,255,255,1) 20%,rgba(255,255,255,0.6) 48%,rgba(255,255,255,0.3) 68%,rgba(255,255,255,0) 100%);
  visibility: hidden;
}
.action-next button {
  margin-right: 8px;
}
@media(hover:hover) {
  .action-prev button {
    visibility: visible;
  }
  .action-next button {
    visibility: hidden;
  }
}
"
`;

exports[`getComponentCss() should return correct css for gradientColor: background-base, isNextHidden: true, isPrevHidden: true, scrollIndicatorPosition: undefined, hasScrollbar: true and theme: light 1`] = `
":host {
  display: block;
  height: inherit !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
button {
  display: flex;
  pointer-events: auto;
  align-items: center;
  justify-content: center;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  height: calc(calc(6px + 2.125ex) + 4px);
  width: calc(calc(6px + 2.125ex) + 4px);
  border: 0;
  outline: 0;
  cursor: pointer;
  background: #FFF;
  border-radius: 4px;
  -webkit-backdrop-filter: blur(32px);
  backdrop-filter: blur(32px);
  visibility: hidden;
  box-shadow: 0px 3px 8px rgba(0, 0, 0, 0.16);
}
@media(hover:hover) {
  button {
    transition: background-color var(--p-transition-duration, .24s) ease;
  }
  button:hover {
    -webkit-backdrop-filter: blur(32px);
    backdrop-filter: blur(32px);
    background: rgba(148, 149, 152, .18);
  }
}

.root {
  position: relative;
  display: grid;
  grid-template-columns: calc(calc(6px + 2.125ex) + 24px) minmax(0, 1fr) calc(calc(6px + 2.125ex) + 24px);
  margin: 0 -4px;
  height: inherit;
}
.scroll-area {
  grid-area: 1 / 1 / 1 / -1;
  padding: 4px;
  overflow: auto hidden;
}
.scroll-wrapper {
  position: relative;
  display: inline-flex;
  min-height: 28px;
  min-width: 100%;
  vertical-align: top;
  outline: 0;
}
.scroll-wrapper::before {
  content: "";
  position: absolute;
  top: -4px;
  left: -4px;
  right: -4px;
  bottom: -4px;
  border: 2px solid transparent;
  border-radius: 4px;
  pointer-events: none;
}
.scroll-wrapper:focus::before {
  border-color: #1A44EA;
}
.scroll-wrapper:focus:not(:focus-visible)::before {
  border-color: transparent;
}
.trigger {
  position: absolute;
  top: 0;
  bottom: 0;
  width: 1px;
  visibility: hidden;
}
.trigger:first-of-type {
  left: 0;
}
.trigger:last-of-type {
  right: 0;
}
.action-prev {
  position: absolute;
  top: 0;
  bottom: 0;
  direction: ltr;
  width: calc(calc(6px + 2.125ex) + 24px);
  padding: 4px 0;
  pointer-events: none;
  display: flex;
  align-items: flex-start;
  left: -1px;
  justify-content: flex-start;
  background: linear-gradient(to right, rgba(255,255,255,1) 20%,rgba(255,255,255,0.6) 48%,rgba(255,255,255,0.3) 68%,rgba(255,255,255,0) 100%);
  visibility: hidden;
}
.action-prev button {
  margin-left: 8px;
}
.action-next {
  position: absolute;
  top: 0;
  bottom: 0;
  direction: ltr;
  width: calc(calc(6px + 2.125ex) + 24px);
  padding: 4px 0;
  pointer-events: none;
  display: flex;
  align-items: flex-start;
  right: -1px;
  justify-content: flex-end;
  background: linear-gradient(to left, rgba(255,255,255,1) 20%,rgba(255,255,255,0.6) 48%,rgba(255,255,255,0.3) 68%,rgba(255,255,255,0) 100%);
  visibility: hidden;
}
.action-next button {
  margin-right: 8px;
}
@media(hover:hover) {
  .action-prev button {
    visibility: hidden;
  }
  .action-next button {
    visibility: hidden;
  }
}
"
`;

exports[`getComponentCss() should return correct css for gradientColor: background-surface, isNextHidden: false, isPrevHidden: false, scrollIndicatorPosition: center, hasScrollbar: false and theme: dark 1`] = `
":host {
  display: block;
  height: inherit !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
button {
  display: flex;
  pointer-events: auto;
  align-items: center;
  justify-content: center;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  height: calc(calc(6px + 2.125ex) + 4px);
  width: calc(calc(6px + 2.125ex) + 4px);
  border: 0;
  outline: 0;
  cursor: pointer;
  background: #0E0E12;
  border-radius: 4px;
  -webkit-backdrop-filter: blur(32px);
  backdrop-filter: blur(32px);
  visibility: hidden;
}
@media(hover:hover) {
  button {
    transition: background-color var(--p-transition-duration, .24s) ease;
  }
  button:hover {
    -webkit-backdrop-filter: blur(32px);
    backdrop-filter: blur(32px);
    background: rgba(148, 149, 152, .18);
  }
}

.root {
  position: relative;
  display: grid;
  grid-template-columns: calc(calc(6px + 2.125ex) + 24px) minmax(0, 1fr) calc(calc(6px + 2.125ex) + 24px);
  margin: 0 -4px;
  height: inherit;
}
.scroll-area {
  grid-area: 1 / 1 / 1 / -1;
  padding: 4px;
  overflow: auto hidden;
  -ms-overflow-style: none;
  scrollbar-width: none;
}
.scroll-area::-webkit-scrollbar {
  display: none;
}
.scroll-wrapper {
  position: relative;
  display: inline-flex;
  min-height: 28px;
  min-width: 100%;
  vertical-align: top;
  outline: 0;
}
.scroll-wrapper::before {
  content: "";
  position: absolute;
  top: -4px;
  left: -4px;
  right: -4px;
  bottom: -4px;
  border: 2px solid transparent;
  border-radius: 4px;
  pointer-events: none;
}
.scroll-wrapper:focus::before {
  border-color: #1A44EA;
}
.scroll-wrapper:focus:not(:focus-visible)::before {
  border-color: transparent;
}
.trigger {
  position: absolute;
  top: 0;
  bottom: 0;
  width: 1px;
  visibility: hidden;
}
.trigger:first-of-type {
  left: 0;
}
.trigger:last-of-type {
  right: 0;
}
.action-prev {
  position: absolute;
  top: 0;
  bottom: 0;
  direction: ltr;
  width: calc(calc(6px + 2.125ex) + 24px);
  padding: 4px 0;
  pointer-events: none;
  display: flex;
  align-items: center;
  left: -1px;
  justify-content: flex-start;
  background: linear-gradient(to right, rgba(33,34,37,1) 20%,rgba(33,34,37,0.6) 48%,rgba(33,34,37,0.3) 68%,rgba(33,34,37,0) 100%);
  visibility: visible;
}
.action-prev button {
  margin-left: 8px;
}
.action-next {
  position: absolute;
  top: 0;
  bottom: 0;
  direction: ltr;
  width: calc(calc(6px + 2.125ex) + 24px);
  padding: 4px 0;
  pointer-events: none;
  display: flex;
  align-items: center;
  right: -1px;
  justify-content: flex-end;
  background: linear-gradient(to left, rgba(33,34,37,1) 20%,rgba(33,34,37,0.6) 48%,rgba(33,34,37,0.3) 68%,rgba(33,34,37,0) 100%);
  visibility: visible;
}
.action-next button {
  margin-right: 8px;
}
@media(hover:hover) {
  .action-prev button {
    visibility: visible;
  }
  .action-next button {
    visibility: visible;
  }
}
"
`;

exports[`getComponentCss() should return correct css for gradientColor: background-surface, isNextHidden: false, isPrevHidden: false, scrollIndicatorPosition: center, hasScrollbar: false and theme: light 1`] = `
":host {
  display: block;
  height: inherit !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
button {
  display: flex;
  pointer-events: auto;
  align-items: center;
  justify-content: center;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  height: calc(calc(6px + 2.125ex) + 4px);
  width: calc(calc(6px + 2.125ex) + 4px);
  border: 0;
  outline: 0;
  cursor: pointer;
  background: #EEEFF2;
  border-radius: 4px;
  -webkit-backdrop-filter: blur(32px);
  backdrop-filter: blur(32px);
  visibility: hidden;
  box-shadow: 0px 3px 8px rgba(0, 0, 0, 0.16);
}
@media(hover:hover) {
  button {
    transition: background-color var(--p-transition-duration, .24s) ease;
  }
  button:hover {
    -webkit-backdrop-filter: blur(32px);
    backdrop-filter: blur(32px);
    background: rgba(148, 149, 152, .18);
  }
}

.root {
  position: relative;
  display: grid;
  grid-template-columns: calc(calc(6px + 2.125ex) + 24px) minmax(0, 1fr) calc(calc(6px + 2.125ex) + 24px);
  margin: 0 -4px;
  height: inherit;
}
.scroll-area {
  grid-area: 1 / 1 / 1 / -1;
  padding: 4px;
  overflow: auto hidden;
  -ms-overflow-style: none;
  scrollbar-width: none;
}
.scroll-area::-webkit-scrollbar {
  display: none;
}
.scroll-wrapper {
  position: relative;
  display: inline-flex;
  min-height: 28px;
  min-width: 100%;
  vertical-align: top;
  outline: 0;
}
.scroll-wrapper::before {
  content: "";
  position: absolute;
  top: -4px;
  left: -4px;
  right: -4px;
  bottom: -4px;
  border: 2px solid transparent;
  border-radius: 4px;
  pointer-events: none;
}
.scroll-wrapper:focus::before {
  border-color: #1A44EA;
}
.scroll-wrapper:focus:not(:focus-visible)::before {
  border-color: transparent;
}
.trigger {
  position: absolute;
  top: 0;
  bottom: 0;
  width: 1px;
  visibility: hidden;
}
.trigger:first-of-type {
  left: 0;
}
.trigger:last-of-type {
  right: 0;
}
.action-prev {
  position: absolute;
  top: 0;
  bottom: 0;
  direction: ltr;
  width: calc(calc(6px + 2.125ex) + 24px);
  padding: 4px 0;
  pointer-events: none;
  display: flex;
  align-items: center;
  left: -1px;
  justify-content: flex-start;
  background: linear-gradient(to right, rgba(238,239,242,1) 20%,rgba(238,239,242,0.6) 48%,rgba(238,239,242,0.3) 68%,rgba(238,239,242,0) 100%);
  visibility: visible;
}
.action-prev button {
  margin-left: 8px;
}
.action-next {
  position: absolute;
  top: 0;
  bottom: 0;
  direction: ltr;
  width: calc(calc(6px + 2.125ex) + 24px);
  padding: 4px 0;
  pointer-events: none;
  display: flex;
  align-items: center;
  right: -1px;
  justify-content: flex-end;
  background: linear-gradient(to left, rgba(238,239,242,1) 20%,rgba(238,239,242,0.6) 48%,rgba(238,239,242,0.3) 68%,rgba(238,239,242,0) 100%);
  visibility: visible;
}
.action-next button {
  margin-right: 8px;
}
@media(hover:hover) {
  .action-prev button {
    visibility: visible;
  }
  .action-next button {
    visibility: visible;
  }
}
"
`;
